--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>test</title>
   <!-- <link rel="stylesheet" type="text/css" href="app.css">-->
     <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/antd/2.13.0/antd.min.css">
+    <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app" style="height: 100%"></div>
 <script src="static/js/zepto/zepto.js"></script>
     <script src="static/common.js"></script>
 <script src="app.bundle.js"></script>
