--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>test</title>
-  <!-- <link rel="stylesheet" type="text/css" href="app.css">-->
+    <!-- <link rel="stylesheet" type="text/css" href="app.css">-->
     <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/antd/2.13.0/antd.min.css">
     <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
-    <div id="app" style="height: 100%"></div>
+<div id="app" style="height: 100%"></div>
 <script src="static/js/zepto/zepto.js"></script>
-    <script src="static/common.js"></script>
+<script src="static/js/js.cookie.js"></script><!--引入Cookie-->
+<script src="static/common.js"></script>
 <script src="app.bundle.js"></script>
 </body>
 </html>
