--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <div id="app" style="height: 100%"></div>
-<script src="static/js/zepto/zepto.js"></script>
-<script src="static/js/js.cookie.js"></script><!--引入Cookie-->
-<script src="static/common.js"></script>
+<script src="src/static/js/zepto/zepto.js"></script>
+<script src="src/static/js/js.cookie.js"></script><!--引入Cookie-->
+<script src="src/static/common.js"></script>
 <script src="app.bundle.js"></script>
 </body>
 </html>
