--- a/template.html
+++ b/template.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>test</title>
+    <!-- <link rel="stylesheet" type="text/css" href="app.css">-->
+    <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/antd/2.13.0/antd.min.css">
+    <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 <body>
-    <div id="app"></div>
+<div id="app" style="height: 100%"></div>
+<script src="static/js/zepto/zepto.js"></script>
+<script src="static/js/js.cookie.js"></script><!--引入Cookie-->
+<script src="static/common.js"></script>
+<script src="app.bundle.js"></script>
 </body>
 </html>
